--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ about-author: My name is Adam Bacon. I’m a full-time I.T employee, I use my kn
 
 # Contact links
 email: adambacon1@hotmail.com # Add your Email address
-website: https://github.com/psDevUK # Add your website, do not add http://
+website: github.com/psDevUK # Add your website, do not add http://
 linkedin: 'adam-bacon-993009100/' # Add your Linkedin handle
 github: psdevuk # Add your Github handle
 twitter: '@psdevuk' # Add your Twitter handle
